Fixing date / time input size on Safari

--- a/src/public/resources/css/_rota.scss
+++ b/src/public/resources/css/_rota.scss
@@ -1,3 +1,11 @@
+form {
+
+    input[type="date"],
+    input[type="time"] {
+        height: 38px;
+    }
+}
+
 .rota-services {
     .people {
         >p {
